# univlg

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  train.py
data_preparation/matterport3d/: m3d2coco.py  process_matterport_3d.py
data_preparation/scannet/: README.md  SensorData.py  globals_dirs.py  preprocess_sens.sh  scannet2coco.py
docs/: DATA.md  INSTALL.md  RUN.md  init.sh  requirements.txt
libs/pointops2/: setup.py
scripts/: main.sh  setup.sh  standalone_eval.py
tools/: generate_clip_sampling_data.py  generate_object_pixel_counts.py  generate_predicted_spans.py  generate_scene_text_embeddings.py
univlg/: config.py  model_data.py  video_maskformer_model.py
univlg/data_video/: build.py  data_utils.py  dataset_mapper_language.py  dataset_mapper_scannet.py  referrential_grounding_evaluator.py
univlg/data_video/datasets/: frame_selector.py  load_coco_ref.py  load_sr3d.py  ref_coco_utils.py
univlg/modeling/: visual_backbone.py
univlg/modeling/backproject/: backproject.py
univlg/modeling/pixel_decoder/: msdeformattn.py
univlg/utils/: decoupled_utils.py
