[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
sources = ["univlg"]

[tool.uv]
package = false

# See: https://github.com/astral-sh/uv/issues/9079
find-links = ["https://data.pyg.org/whl/torch-2.5.1+cu124.html"]

[project]
name = "univlg"
version = "0.0.1"
authors = [{ name="Alexander Swerdlow", email="aswerdlow1@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "addict==2.4.0",
  "albumentations>=2.0.4",
  "clip",
  "ftfy>=6.3.1",
  "h5py>=3.13.0",
  "hf-transfer>=0.1.9",
  "hydra-core~=1.3",
  "image-utilities==0.0.3",
  "imageio>=2.37.0",
  "ipdb>=0.13.13",
  "ipykernel~=6.29",
  "ipython~=8.24",
  "jupyterlab~=4.2",
  "loguru>=0.7.3",
  "matplotlib~=3.9",
  "natsort==8.4.0",
  "nltk>=3.9.1",
  "notebook~=7.2",
  "numpy~=1.24",
  "numpy-quaternion~=2024.0.3",
  "omegaconf~=2.3",
  "open-clip-torch~=2.29.0",
  "opencv-python~=4.7.0",
  "pandas~=2.2.2",
  "plotly~=5.22",
  "plyfile~=1.0.3",
  "prettytable>=3.14.0",
  "protobuf~=3.20.3",
  "pycocoevalcap>=1.2",
  "pytorch-msssim~=1.0.0",
  "pyviz3d~=0.3.6",
  "regex>=2024.11.6",
  "requests~=2.32",
  "scikit-learn~=1.4.2",
  "scipy~=1.13.0",
  "seaborn~=0.12.2",
  "setuptools>=75.8.0",
  "tenacity>=9.0.0",
  "tensorboard~=2.16",
  "tensorboardx~=2.6",
  "timm~=1.0.13",
  "torch~=2.5.0",
  "torchvision~=0.20.0",
  "torch-geometric>=2.6.1",
  "torchgeometry~=0.1.2",
  "torchinfo~=1.8",
  "torchio~=0.20.0",
  "torchtnt~=0.2.4",
  "tqdm~=4.65",
  "transformers~=4.44",
  "typer~=0.12.3",
  "viztracer~=0.16.0",
  "wandb~=0.19.7",
  "yapf~=0.40.2",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },]
torchvision = [{ index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },]
clip = { git = "https://github.com/openai/CLIP.git", rev = "dcba3cb2e2827b402d2701e7e1c7d9fed8a20ef1"}

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.black]
line-length = 150
target-version = ['py310']
